- fix wrapping on IE

--- a/skins/default/mail.css
+++ b/skins/default/mail.css
@@ -782,9 +782,10 @@ div.message-part div.pre
   margin: 0px;
   padding: 0px;
   font-family: monospace;
-  white-space: pre;
   white-space: -moz-pre-wrap !important;
   white-space: -o-pre-wrap !important;
+  white-space: pre-wrap !important;
+  white-space: pre;
   word-wrap: break-word; /* IE (and Safari) */
 }
 
